--- a/PadSYNC.Web/Web.config
+++ b/PadSYNC.Web/Web.config
@@ -11,11 +11,11 @@
   <connectionStrings>
     <!--<add name="CloudCustomer" connectionString="Data Source=115.182.36.37;Initial Catalog=CloudCustomer;Persist Security Info=True;User ID=prj_all_reader;Password=DSANPjXE5g" providerName="System.Data.SqlClient" />-->
     <!--<add name="CloudAsset" connectionString="Data Source=115.182.36.37;Initial Catalog=CloudAsset;Persist Security Info=True;User ID=prj_all_reader;Password=DSANPjXE5g" providerName="System.Data.SqlClient" />-->
-    <add name="CloudCourse" connectionString="Data Source=115.182.36.37;Initial Catalog=CloudCourse;Persist Security Info=True;User ID=prj_all_reader;Password=DSANPjXE5g" providerName="System.Data.SqlClient" />
+    <!--<add name="CloudCourse" connectionString="Data Source=115.182.36.37;Initial Catalog=CloudCourse;Persist Security Info=True;User ID=prj_all_reader;Password=DSANPjXE5g" providerName="System.Data.SqlClient" />-->
     <add name="CloudCustomer" connectionString="Data Source=10.1.55.50;Initial Catalog=CloudCustomer;User ID=sa;Password=xueda123$" providerName="System.Data.SqlClient" />
     <add name="CloudAsset" connectionString="Data Source=10.1.55.120;Initial Catalog=CloudAsset;Persist Security Info=True;User ID=myuser;Password=xuedadev1234%" providerName="System.Data.SqlClient" />
     <add name="CloudTrade" connectionString="Data Source=10.1.55.120;Initial Catalog=CloudTrade;User ID=myuser;Password=xuedadev1234%" providerName="System.Data.SqlClient" />
-    <!--<add name="CloudCourse" connectionString="Data Source=10.1.55.120;Initial Catalog=CloudCourse;Persist Security Info=True;User ID=myuser;Password=xuedadev1234%" providerName="System.Data.SqlClient" />-->
+    <add name="CloudCourse" connectionString="Data Source=10.1.55.120;Initial Catalog=CloudCourse;Persist Security Info=True;User ID=myuser;Password=xuedadev1234%" providerName="System.Data.SqlClient" />
     <add name="CloudCourse160" connectionString="Data Source=10.1.55.120;Initial Catalog=CloudCourse;Persist Security Info=True;User ID=myuser;Password=xuedadev1234%" providerName="System.Data.SqlClient" />
     <add name="CloudOrganization" connectionString="server=10.1.55.122;database=CloudOrganization;uid=root;pwd=xueda123$;Treat Tiny As Boolean=false" providerName="MySql.Data.MySqlClient"/>
   </connectionStrings>
@@ -56,7 +56,8 @@
     <add key="RabbitMQHostName" value="localhost"></add>
     <add key="RabbitMQUserName" value="sync"/>
     <add key="RabbitMQPassword" value="sync"/>
-    <add key="DataTables" value="OrderStatistics,OrderItems,PurchaseOrders,Period,Organization,CustomerSearch,AssignCourse,Asset,ProductAssign,OrderCustomerInfo,JobSearch,ProductSubject,StudentAssignCourse,TableVersion,Products,CodeItem,ClassInfo,ProductsBasic,ProductClassProperty,ProductGrade,CustomerAsset,CSRelation,AsignCourseVoucher" />
+    <add key="CacheTime" value="30"/>
+    <add key="DataTables" value="SYNCOperation,OrderStatistics,OrderItems,PurchaseOrders,Period,Organization,CustomerSearch,AssignCourse,Asset,ProductAssign,OrderCustomerInfo,JobSearch,ProductSubject,StudentAssignCourse,TableVersion,Products,CodeItem,ClassInfo,ProductsBasic,ProductClassProperty,ProductGrade,CustomerAsset,CSRelation,AsignCourseVoucher" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.0"/>
