--- a/PadSYNC.Web/Web.config
+++ b/PadSYNC.Web/Web.config
@@ -65,6 +65,8 @@
     <add name="CloudCourse" connectionString="Data Source=10.1.55.120;Initial Catalog=CloudCourse;Persist Security Info=True;User ID=myuser;Password=xuedadev1234%" providerName="System.Data.SqlClient" />
     <add name="CloudOrganization" connectionString="server=10.1.55.122;database=CloudOrganization;uid=root;pwd=xueda123$;Treat Tiny As Boolean=false" providerName="MySql.Data.MySqlClient"/>
     <!--<add name="CloudOrganization" connectionString="server=115.182.36.41;database=CloudOrganization;uid=root;pwd=xueda123$;Treat Tiny As Boolean=false" providerName="MySql.Data.MySqlClient"/>-->
+  <!--<add name="CloudCourse" connectionString="Data Source=115.182.36.37;Initial Catalog=CloudCourse;Persist Security Info=True;User ID=prj_all_reader;Password=DSANPjXE5g" providerName="System.Data.SqlClient" />-->
+  <!--<add name="CloudCustomer" connectionString="Data Source=115.182.36.37;Initial Catalog=CloudCustomer;User ID=prj_all_reader;Password=DSANPjXE5g" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
   <system.serviceModel>
     <bindings>
@@ -106,6 +108,7 @@
     <add key="RabbitMQPassword" value="sync"/>
     <add key="CacheEnable" value="true"/>
     <add key="CacheTime" value="30"/>
+    <add key="logEnable" value="false"/>
     <add key="DataTables" value="SYNCOperation,OrderStatistics,OrderItems,PurchaseOrders,Period,Organization,CustomerSearch,AssignCourse,Asset,ProductAssign,OrderCustomerInfo,JobSearch,ProductSubject,StudentAssignCourse,TableVersion,Products,CodeItem,ClassInfo,ProductsBasic,ProductClassProperty,ProductGrade,CustomerAsset,CSRelation,AsignCourseVoucher" />
   </appSettings>
   <system.web>
