--- a/PadSYNC.Web/PadSYNC.Web.csproj
+++ b/PadSYNC.Web/PadSYNC.Web.csproj
@@ -209,6 +209,7 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\LogController.cs" />
     <Compile Include="Controllers\SYNCController.cs" />
+    <Compile Include="Controllers\UpdateTestController.cs" />
     <Compile Include="Filters\LogsFilterAttribute.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -954,9 +955,11 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Web.config" />
     <Content Include="Views\Log\Index.cshtml" />
+    <Content Include="Views\UpdateTest\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Database\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
